--- a/lesson_day_03/form/Form01.html
+++ b/lesson_day_03/form/Form01.html
@@ -17,6 +17,7 @@
             <input type="password" name="pwrd">
             <br>
             <br>
+            <input type="">
             
         </form>
     </body>
