--- a/lesson_day_01/exercises4/ex03.html
+++ b/lesson_day_01/exercises4/ex03.html
@@ -4,7 +4,7 @@
 </head>
 <body>
    <ol>
-    <li>Бие дааж нэмэлтээр юм сурцгаая найзууд аа! гэсэн цогцолбор байна.</li>
+    <li>Бие дааж <ins>asdf</ins> нэмэлтээр юм сурцгаая найзууд аа! гэсэн цогцолбор байна.</li>
     <li>Энэ <a href="https://www.w3schools.com/">холбоосыг</a> шалгана уу.</li>
 </ol>
 </body>
