--- a/lesson_day_01/exercises3/ex02.html
+++ b/lesson_day_01/exercises3/ex02.html
@@ -10,6 +10,8 @@
             <li>Кофе</li>
             <li>Сүү</li>
             <li>Талх</li>
+            <li>Талх</li>
+            <li>Талх</li>
         </ol>
        </dl>
     </ul>
