--- a/Project/index.html
+++ b/Project/index.html
@@ -6,7 +6,7 @@
     <title>TT projects</title>
   </head>
   <body>
-    <h1>asdsasd</h1>
+    <a href="./project-1/pro01.html">project 1</a>
     <h1>asdsasd</h1>
     <h1>asdsasd</h1>
   </body>
