--- a/Project/index.html
+++ b/Project/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <a href="./project-1/pro01.html">project 1</a>
-    <h1>asdsasd</h1>
+    <a href="./project-1/pro02.html">project 2</a>
     <h1>asdsasd</h1>
   </body>
 </html>
