--- a/Project/project-1/pro02.html
+++ b/Project/project-1/pro02.html
@@ -13,12 +13,12 @@
   <body>
     <div class="div1">
       <img src="./img/img1.jpg" alt="1" />
-      <img src="./img/img2.jpg" alt="2" />
+      <img src="./img/img2.jpg" alt="2" class="img1" />
       <img src="./img/img3.jpg" alt="3" />
-      <img src="./img/img4.jpg" alt="4" />
-      <img src="./img/img5.jpg" alt="5" />
+      <img src="./img/img4.jpg" alt="4" class="img1" />
+      <img src="./img/img5.jpg" alt="5" class="img1" />
       <img src="./img/img6.jpg" alt="6" />
-      <img src="./img/img7.jpg" alt="7" />
+      <img src="./img/img7.jpg" alt="7" class="img1" />
     </div>
   </body>
   <footer>
@@ -36,4 +36,5 @@
       </tr>
     </table>
   </footer>
+  <div class="div2"></div>
 </html>
