--- a/lesson_day_05/exercises2/ex05.html
+++ b/lesson_day_05/exercises2/ex05.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <a href="">1asdfasdf</a>
+    <a href="" target="_blank">1asdfasdf</a>
     <a href="">2asdfasdfasdf</a>
 </body>
 </html>
