--- a/Project/index.html
+++ b/Project/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TT projects</title>
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://www.shutterstock.com/shutterstock/photos/1952341264/display_1500/stock-vector-transparent-smile-icon-png-vector-illustration-of-an-smile-icon-in-dark-color-and-transparent-1952341264.jpg"
+    />
   </head>
   <body>
-    <a href="./project-1/pro01.html">project 1</a>
-    <a href="./project-1/pro02.html">project 2</a>
-    <a href="./project-1/pro03.html">project 3</a>
-    <a href="./project-1/pro04/pro04.html">project 4</a>
-    <a href="./project-1/pro05/pro05.html">project 5</a>
+    <div id="page">
+      <h1>iCode projects</h1>
+      <div class="box2">
+        <div class="box1">
+          <a href="./project-1/pro01.html" target="iframe_a">project 1</a>
+          <a href="./project-1/pro02.html" target="iframe_a">project 2</a>
+          <a href="./project-1/pro03.html" target="iframe_a">project 3</a>
+          <a href="./project-1/pro04/pro04.html" target="iframe_a">project 4</a>
+          <a href="./project-1/pro05/pro05.html" target="iframe_a">project 5</a>
+        </div>
+        <iframe src="./index.html" name="iframe_a" frameborder="0"></iframe>
+      </div>
+    </div>
   </body>
 </html>
