--- a/Project/index.html
+++ b/Project/index.html
@@ -21,6 +21,7 @@
           <a href="./project-1/pro03.html" target="iframe_a">project 3</a>
           <a href="./project-1/pro04/pro04.html" target="iframe_a">project 4</a>
           <a href="./project-1/pro05/pro05.html" target="iframe_a">project 5</a>
+          <a href="./test hover/testhvr.html" target="iframe_a">Test hover</a>
         </div>
         <iframe src="./index.html" name="iframe_a" frameborder="0"></iframe>
       </div>
