--- a/Project/index.html
+++ b/Project/index.html
@@ -22,6 +22,7 @@
           <a href="./project-1/pro04/pro04.html" target="iframe_a">project 4</a>
           <a href="./project-1/pro05/pro05.html" target="iframe_a">project 5</a>
           <a href="./test hover/testhvr.html" target="iframe_a">Test hover</a>
+          <a href="./project-7/pro07.html" target="iframe_a">project 7</a>
         </div>
         <iframe src="./index.html" name="iframe_a" frameborder="0"></iframe>
       </div>
