--- a/Project/project-7/pro07.html
+++ b/Project/project-7/pro07.html
@@ -10,13 +10,12 @@
     <div class="box">
       <div class="box1"></div>
       <div class="box2">hello world</div>
-      <div class="box3"></div>
+      <div class="box3"><h1>Hover me</h1></div>
     </div>
     <div class="box">
       <div class="box4"></div>
       <div class="box5">hello world</div>
       <div class="box3"></div>
     </div>
-    <h1>hover me</h1>
   </body>
 </html>
