--- a/lesson_day_16/index.html
+++ b/lesson_day_16/index.html
@@ -13,6 +13,7 @@
     <p id="paragraph" style="color: black;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, facilis perspiciatis vero consectetur, aut dignissimos libero omnis excepturi veritatis quidem saepe? Sunt corrupti, esse quos unde sint tenetur deleniti veritatis.</p>
     </div>
     <button onclick="alert2()">1</button>
+    <button id="mybutt">click me</button>
     <script src="./script.js"></script>
 </body>
 </html>
