--- a/lesson_day_17/exercises02/cal-02.html
+++ b/lesson_day_17/exercises02/cal-02.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./cal-02.css" />
-  </head>
-  <body>
-    <div id="page">
-      <div type="text" id="inputNumber"></div>
-      <div id="ButtonBox">
-        <button class="grey" id="AC">AC</button><button class="grey" id="+-">&#177</button><button class="grey" id="%">&#37</button><button class="yellow" id="/">/</button
-        ><button class="btn">7</button><button class="btn">8</button><button class="btn">9</button><button class="yellow">*</button
-        ><button class="btn">4</button><button class="btn">5</button><button class="btn">6</button><button class="yellow">-</button
-        ><button class="btn">1</button><button class="btn">2</button><button class="btn">2</button><button class="yellow">+</button
-        ><button class="zero, btn">0</button><button>.</button><button>=</button>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="./cal-02.css" />
+</head>
+
+<body>
+  <div id="page">
+    <input type="text" id="inputNumber" value="0"></input>
+    <div id="ButtonBox">
+      <button class="grey" id="AC">AC</button><button class="grey" id="+-">&#177</button><button class="grey"
+        id="%">&#37</button><button class="yellow" id="/">/</button><button class="btn">7</button><button
+        class="btn">8</button><button class="btn">9</button><button class="yellow">*</button><button
+        class="btn">4</button><button class="btn">5</button><button class="btn">6</button><button
+        class="yellow">-</button><button class="btn">1</button><button class="btn">2</button><button
+        class="btn">2</button><button class="yellow">+</button><button
+        class="zero btn">0</button><button>.</button><button id="eq">=</button>
     </div>
-    <script src="./cal-02.js"></script>
-  </body>
+  </div>
+  <script src="./cal-02.js"></script>
+</body>
+
 </html>
